<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2009-2011 Felix Bechstein
	-->
	<!--
		This file is part of WebSMS. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
	-->
	<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
	-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/appearance_">
	<ListPreference android:title="@string/theme_"
		android:key="theme" android:entries="@array/themes"
		android:entryValues="@array/themes_values" />
	<EditTextPreference android:key="textsizen"
		android:title="@string/textsize_" android:summary="@string/textsize_hint"
		android:inputType="number" />
	<CheckBoxPreference android:key="hide_send_button"
		android:title="@string/hide_send_button" android:summary="@string/hide_send_button_hint" />
	<CheckBoxPreference android:key="hide_cancel_button"
		android:title="@string/hide_cancel_button" android:summary="@string/hide_cancel_button_hint" />
	<CheckBoxPreference android:key="hide_extras_button"
		android:title="@string/hide_extras_button_" android:summary="@string/hide_extras_button_hint" />
	<CheckBoxPreference android:key="hide_emo_button"
		android:title="@string/hide_emo_button" android:summary="@string/hide_emo_button_hint" />
	<CheckBoxPreference android:key="hide_select_recipients_button"
		android:title="@string/hide_select_recipients_button_"
		android:summary="@string/hide_select_recipients_button_hint" />
	<CheckBoxPreference android:key="hide_clear_recipients_button"
		android:title="@string/hide_clear_recipients_button_" android:summary="@string/hide_clear_recipients_button_hint" />
	<CheckBoxPreference android:key="hide_bg_connector"
		android:title="@string/hide_bg_connector_" android:summary="@string/hide_bg_connector_hint" />
	<CheckBoxPreference android:key="mobiles_only"
		android:title="@string/mobile_only_" android:summary="@string/mobile_only_hint" />
	<CheckBoxPreference android:key="hide_paste"
		android:title="@string/hide_paste_" android:summary="@string/hide_paste_hint" />
	<ListPreference android:key="morelocale" android:title="@string/custom_language_"
		android:summary="@string/custom_language_hint" android:entries="@array/lang_"
		android:entryValues="@array/lang_values" />
</PreferenceScreen>