<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2009-2011 Felix Bechstein
	-->
	<!--
		This file is part of WebSMS. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
	-->
	<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
	-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/appearance_and_behavior_">
		<PreferenceScreen android:title="@string/appearance_">
			<intent android:action="android.intent.action.MAIN"
				android:targetPackage="de.ub0r.android.websms" android:targetClass="de.ub0r.android.websms.PreferencesAppearance" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/behavior_">
			<intent android:action="android.intent.action.MAIN"
				android:targetPackage="de.ub0r.android.websms" android:targetClass="de.ub0r.android.websms.PreferencesBehavior" />
		</PreferenceScreen>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/settings_common">
		<EditTextPreference android:key="sender"
			android:title="@string/sender_" android:dialogTitle="@string/sender_"
			android:summary="@string/sender_hint" android:inputType="phone" />
		<EditTextPreference android:key="defprefix"
			android:title="@string/defprefix_" android:dialogTitle="@string/defprefix_"
			android:summary="@string/defprefix_hint" android:inputType="phone" />
		<EditTextPreference android:key="signature"
			android:title="@string/signature_" android:dialogTitle="@string/signature_"
			android:summary="@string/signature_hint" />
		<EditTextPreference android:key="default_recipient"
			android:title="@string/default_recipient_" android:summary="@string/default_recipient_hint" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/settings_connectors"
		android:key="settings_connectors">
		<CheckBoxPreference android:key="enable_sms"
			android:title="@string/enable_sms" android:summary="@string/enable_sms_hint" />

		<!-- other connectors getting added dynamicaly -->

	</PreferenceCategory>
	<PreferenceScreen android:key="set_std_connector"
		android:title="@string/set_stdandard_connector_" android:summary="@string/set_stdandard_connector_hint" />
	<PreferenceScreen android:key="clear_std_connector"
		android:title="@string/clear_stdandard_connector_" />
	<PreferenceScreen android:key="more_connectors"
		android:title="@string/more_connectors_" android:summary="@string/more_connectors_hint" />
	<PreferenceScreen android:title="@string/more_connectors__"
		android:summary="@string/more_connectors__hint">
		<intent android:action="android.intent.action.VIEW"
			android:data="http://code.google.com/p/websmsdroid/wiki/ConnectorsFAQ" />
	</PreferenceScreen>
	<PreferenceCategory android:title="@string/about_">
		<PreferenceScreen android:title="@string/about_"
			android:summary="@string/about_hint">
			<intent android:action="android.intent.action.MAIN"
				android:targetPackage="de.ub0r.android.websms" android:targetClass="de.ub0r.android.websms.About" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/faq_"
			android:summary="@string/faq_hint">
			<intent android:action="android.intent.action.VIEW"
				android:data="http://code.google.com/p/websmsdroid/wiki/FAQ" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/feedback_"
			android:summary="@string/feedback_hint">
			<intent android:action="android.intent.action.VIEW"
				android:data="http://code.google.com/p/websmsdroid/issues/list" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/twitter_"
			android:summary="@string/twitter_hint">
			<intent android:action="android.intent.action.VIEW"
				android:data="http://twitter.com/flx_b" />
		</PreferenceScreen>
		<PreferenceScreen android:key="more_apps"
			android:title="@string/more_apps_" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/debug_">
		<PreferenceScreen android:key="send_logs"
			android:title="@string/send_logs_" android:summary="@string/send_logs_hint" />
	</PreferenceCategory>
</PreferenceScreen>
