<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2009-2011 Felix Bechstein
	-->
	<!--
		This file is part of WebSMS. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
	-->
	<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
	-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/appearance_and_behavior_">
		<PreferenceScreen android:title="@string/appearance_">
			<intent android:action="android.intent.action.MAIN"
				android:targetPackage="de.ub0r.android.websms" android:targetClass="de.ub0r.android.websms.PreferencesAppearance" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/behavior_">
			<intent android:action="android.intent.action.MAIN"
				android:targetPackage="de.ub0r.android.websms" android:targetClass="de.ub0r.android.websms.PreferencesBehavior" />
		</PreferenceScreen>
	</PreferenceCategory>
</PreferenceScreen>
